--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body {
     flex-direction: column ;
     display: flex;
     align-items: center;
+    flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+
+
 
 }/* Separando os elementos dentro da pagina*/
 
@@ -29,6 +35,10 @@ body {
     font-family: "Gruppo", sans-serif;
     font-weight: 400;
     font-style: normal;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
 }/*Definir uma largura para a seção*/
 
 .apresentacao__conteudo__titulo {
